Responsive login page is ready

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css" >
     <title>Login Page</title>
 </head>
-<body>
+<body class="main__container">
     <div class="login__page">
         <div class="image__container">
             <img src="./images/HTML-Assignemnt-Assets/hero-image.png"  alt="hero image" class="hero__image">
