responsive dashboard is ready

--- a/dashboard.html
+++ b/dashboard.html
@@ -175,6 +175,7 @@
 
           <div class="bargraph__section">
             <span class="salesbycountry__text">Sales by Country</span><br />
+            <div class="pieIMG">
             <img
               src="./images/HTML-Assignemnt-Assets/pie-chart.svg"
               alt="pie chart"
@@ -237,7 +238,7 @@
               />
               <span class="country__text">India</span>
             </div>
-           
+          </div>
           </div>
         </div>
         <div  class="invoice__section"> 
