dashboard is responsive

--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,7 @@
               <span style="font-size: 15px">Total Products</span>
             </p>
           </div>
-          <div class="box-2">
+          <div class="box-2 box-3">
             <img
               src="./images/HTML-Assignemnt-Assets/dollar-filled.svg"
               alt="dollar logo"
@@ -151,7 +151,7 @@
               <span style="font-size: 15px">Today’s Sale</span>
             </p>
           </div>
-          <div class="box-2">
+          <div class="box-2 box-3">
             <img
               src="./images/HTML-Assignemnt-Assets/money-bag.svg"
               alt="moneybag logo"
@@ -165,7 +165,7 @@
         </div>
         <div class="graph__section">
           <div class="datagraph__section">
-            <span class="sale__text">Sale</span> <span class="timeseries">weekly &ensp;  monthly <span style="color: #C8242F ; text-decoration: underline;">&ensp;    yearly</span></span> <br /><br />
+            <span class="sale__text">Sale</span> <span class="timeseries">weekly &ensp;  monthly &ensp;  <span style="color: #C8242F ; text-decoration: underline;">   yearly</span></span> <br /><br />
             <img
               src="./images/HTML-Assignemnt-Assets/data-graph.png"
               alt="data graph"
